--- a/src/app/components/pago/pago.component.html
+++ b/src/app/components/pago/pago.component.html
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-lg-12 text-center">
             <i class="bi bi-file-medical-fill"></i>
-            <h5 class="color">Afiliación de salud</h5>
+            <h5 class="color">Afiliación de salud asociada al pago</h5>
             <h5 class="overflow">{{horarioAtencion.pago?.afiliacionPaciente}}</h5>
         </div>
     </div>
