--- a/src/app/components/paciente/lista-pacientes.component.html
+++ b/src/app/components/paciente/lista-pacientes.component.html
@@ -29,8 +29,8 @@
                                     <div class="col-lg-12 text-center">
                                         <button [routerLink]="['../../', paciente.idPaciente]" class="btn btn-primary"
                                             type="button">Ver detalle</button>
-                                        <button (click)="getAtencionesDeUnPaciente(paciente)" class="btn btn-primary"
-                                            type="button" data-toggle="modal" data-target="#atencionesPaciente">Ver
+                                        <button [routerLink]="['../../atenciones', paciente.idPaciente]"
+                                            class="btn btn-primary" type="button">Ver
                                             atenciones</button>
                                     </div>
                                 </div>
@@ -38,7 +38,14 @@
                         </tr>
                     </tbody>
                 </table>
-                <app-paginador *ngIf="paginador" [paginador]='paginador'></app-paginador>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <app-paginador *ngIf="paginador" [paginador]='paginador'></app-paginador>
+                    </div>
+                    <div class="col-lg-6 text-right">
+                        <button (click)="back()" class="btn btn-primary" type="button">Volver</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -75,12 +82,12 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let atencion of atencionesUltimosSeisMeses">
+                                    <!-- <tr *ngFor="let atencion of atencionesUltimosSeisMeses">
                                         <td>{{formatDisplayFechaAtencion(atencion)}}</td>
                                         <td *ngIf="atencion.asistencia == 1">Sí, asiste a sesión de terapia</td>
                                         <td *ngIf="atencion.asistencia == -1">No, falta a sesión de terapia</td>
                                         <td *ngIf="atencion.asistencia == 0">Asistencia pendiente</td>
-                                    </tr>
+                                    </tr> -->
                                 </tbody>
                             </table>
                         </div>
