integra filtración por atenciones asistidas y no asistidas

--- a/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
+++ b/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
@@ -27,7 +27,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let atencion of atenciones | paginate: {id: 'atenciones-paciente', 
+                        <tr *ngFor="let atencion of filtered | paginate: {id: 'atenciones-paciente', 
                                                                             itemsPerPage: 10,
                                                                             currentPage: currentPage,
                                                                             totalItems: total}">
