--- a/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.css
+++ b/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.css
@@ -20,12 +20,16 @@
     border-bottom: 5px solid #284b63;
 }
 
+.color {
+    color: #284b63;
+}
+
 .table-dark {
     background-color: #284b63;
 }
 
 button, button:disabled, button:focus, button:hover {
-    margin-top: 10px;
+    margin-top: 30px;
     background-color: #284b63;
     border-color: #284b63;
 }
