--- a/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
+++ b/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
@@ -13,7 +13,7 @@
 
     <!-- Cuerpo -->
     <div class="row" id="body">
-        <div *ngIf="atenciones.length > 0" class="col-lg-12 text-center">
+        <div *ngIf="filtered.length > 0" class="col-lg-12 text-center">
 
             <!-- Tabla que muestra las atenciones-->
             <div class="table table-responsive-lg">
@@ -50,9 +50,9 @@
         </div>
 
         <!-- Si el paciente no tiene atenciones asociadas -->
-        <div *ngIf="atenciones.length == 0" class="col-lg-12 alert alert-info text-center">
-            <i class="bi bi-exclamation-diamond-fill"></i>
-            <h1>El paciente no registra horarios de atención.</h1>
+        <div *ngIf="filtered.length == 0" class="col-lg-12 text-center">
+            <i class="bi bi-exclamation-diamond-fill color"></i>
+            <h3 class="color">No se encontraron horarios de atención.</h3>
         </div>
 
         <!-- Botón que permite volver atrás -->
