--- a/src/app/components/paciente/paciente/paciente.component.css
+++ b/src/app/components/paciente/paciente/paciente.component.css
@@ -1,9 +1,3 @@
-#anamnesis-paciente {
-    margin-top: 20px;
-    padding-bottom: 20px;
-    border-bottom: 5px solid #284b63;
-}
-
 #datos-paciente {
     border-bottom: 5px solid #284b63;
 }
@@ -39,6 +33,12 @@
 
 .icons {
     font-size: 40px;
+}
+
+.info-paciente {
+    margin-top: 20px;
+    padding-bottom: 20px;
+    border-bottom: 5px solid #284b63;
 }
 
 .options {
