implementa eliminación lógica de anamnesis y ficha de tratamiento al eliminar un paciente, permite búsqueda de pacientes por nombre, apellido o ambos parámetros entre TODOS los pacientes (activos e inactivos)

--- a/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
+++ b/src/app/components/paciente/atenciones-paciente/atenciones-paciente.component.html
@@ -7,7 +7,7 @@
             <h5>El/la paciente ha agendado las siguientes atenciones.</h5>
         </div>
         <div class="col-lg-5">
-            <app-filtrar-asistencia (filterEvent)="filtrar($event)"></app-filtrar-asistencia>
+            <app-filtrar-asistencia [title]="'Filtrar las atenciones'" [options]="options" (filterEvent)="filtrar($event)"></app-filtrar-asistencia>
         </div>
     </div>
 
