--- a/src/app/components/busqueda/filtrar-asistencia/filtrar-asistencia.component.html
+++ b/src/app/components/busqueda/filtrar-asistencia/filtrar-asistencia.component.html
@@ -1,18 +1,21 @@
 <form>
     <div class="form-group">
-        <label for="filtra-asistencia">Filtrar las atenciones</label>
+        <label for="filtra-asistencia">{{title}}</label>
         <div class="input-group">
             <span class="input-group-text"><i class="bi bi-person-check-fill"></i></span>
             <select required name="filtra-asistencia" id="filtra-asistencia" class="form-select" ngModel
                 #asistencia="ngModel">
-                <option value="" selected>Filtrar...</option>
+                <option *ngFor="let option of options" [value]="option.value">{{option.text}}</option>
+
+
+                <!-- <option value="" selected>Filtrar...</option>
                 <option value="1">Asistidas</option>
                 <option value="-1">No asistidas</option>
                 <option value="2">Pagadas</option>
                 <option value="-2">No pagadas</option>
                 <option value="3">Asistidas y pagadas</option>
                 <option value="-3">Asistidas y no pagadas</option>
-                <option value="0">Todas las atenciones</option>
+                <option value="0">Todas las atenciones</option> -->
             </select>
         </div>
     </div>
