Reintegra anamnesis y ficha de tratamiento de un paciente al ser este reintegrado. No permite eliminación de un paciente adeudado, y no se permite eliminación de horarios ya pasados, o de aquellos futuros que fueron pagados

--- a/src/app/components/ficha-tratamiento/ficha-tratamiento.component.html
+++ b/src/app/components/ficha-tratamiento/ficha-tratamiento.component.html
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <div class="row datos-anamnesis">
+        <div *ngIf="paciente.estado == 'Activo'" class="row datos-anamnesis">
             <div class="col-lg-12">
                 <button [routerLink]="['../ficha-tratamiento/', paciente.idPaciente]" class="btn btn-primary"
                     type="button">Modificar ficha de tratamiento</button>
