--- a/src/app/components/paciente/paciente/paciente.component.html
+++ b/src/app/components/paciente/paciente/paciente.component.html
@@ -19,7 +19,7 @@
                             type="button">Eliminar</button>
                     </div>
                     <div *ngIf="paciente.estado == 'Inactivo'" class="col-lg-12">
-                        <button (click)="reintegrar(paciente)" class="btn btn-primary" type="button">Reintegrar paciente</button>
+                        <button (click)="reintegrar()" class="btn btn-primary" type="button">Reintegrar paciente</button>
                     </div>
                 </div>
             </div>
